--- a/public_html/emma.css
+++ b/public_html/emma.css
@@ -26,16 +26,18 @@ body{
 
 .outer-grid{
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
     grid-template-areas:
-        "profile skills"
-        "info skills";
+        "profile"
+        "info"
+        "skills";
 }
 
 .profile{
     display:grid;
-    grid-template-columns: 1fr 1fr;
+    width: 100%;
+    align-items: center;
+    grid-template-rows: 1fr 1fr;
     background-color: var(--clr-light);
     grid-area: profile;
 
@@ -48,6 +50,7 @@ body{
     font-family: var(--ff-main);
     margin-left: 0.5rem;
     list-style: inside;
+    padding-right: 1.6rem;
 }
 
 
@@ -56,6 +59,7 @@ body{
     font-family: var(--ff-main);
     font-size: 1rem;
     margin-top: 2rem;
+    margin-bottom: 2rem;
     padding: 0.5rem;
     grid-area: info;
     
@@ -63,7 +67,39 @@ body{
 
 .skills{
     background-color: var(--clr-light);
-    margin-left: 2rem;
     grid-area: skills;
 
+}
+
+@media screen and (min-width:800px){
+    .outer-grid{
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-areas:
+        "profile skills"
+        "info skills";
+    }
+    .profile{
+        grid-template-columns: 1fr 1fr;
+    }
+    .skills{
+        margin-left: 2rem;
+    }
+
+}
+
+@media screen and (min-width:1440px){
+    .outer-grid{
+        grid-template-columns: repeat(2, 1fr);
+        margin: 0 10% 20px 10%; 
+        grid-template-areas:
+        "profile skills"
+        "info skills";
+    }
+    .profile{
+        grid-template-columns: 1fr 1fr;
+        
+    }
+    .skills{
+        margin-left: 2rem;
+    }
 }
