--- a/public_html/css/Amira.css
+++ b/public_html/css/Amira.css
@@ -1,23 +1,25 @@
 body {
-  font-family: "Open Sans", sans-serif;
+  font-family: "Open Sans", "sans-serif";
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  width: 100%;
 }
 
 /* start landing page */
 
-.landing-page {
- 
-min-height: 100vh;
-padding: :0;
-margin:0;
-background-image: url(../images/larg2.jpg);
-background-size: cover;
-overflow:hidden;
-position: relative;
+.portfolio-sida {
+  min-height: 80vh;
+  padding: 0;
+  margin: 0;
+  background-image: url(images2/01.jpg);
+  background-size: 100% auto;
+  position: relative;
   background-repeat: no-repeat;
-  background-attachment: scroll;
+  z-index: 2;
 }
 
-.landing-page .overlay {
+.portfolio-sida .overlay {
   background-color: rgba(0, 0, 0, 0.671);
   position: absolute;
   width: 100%;
@@ -26,61 +28,250 @@ position: relative;
   top: 0;
   z-index: 1;
 }
-
 .header-area {
   position: relative;
   z-index: 2;
-  color: rgb(255, 255, 255);
   display: flex;
   padding: 10px;
 }
-
+/* start logo */
 .header-area .logo {
-  width: 1000px;
-  padding-top: 30px;
-  padding-left: 20px;
-  padding-bottom: 0px;
+  margin-top: 30px;
+  padding: 0px;
+  padding-left: 30px;
   font-weight: bold;
-  font-size: 20px;
- color:beige;
+  font-size: 15px;
+  color: beige;
+  display: inline-block;
+}
+.header-area .logo span {
+  padding: 35px;
+}
+/* End logo */
+.header-area .container {
+  width: 88%;
+  text-align: right;
+  margin-top: 10px;
+  position: relative;
+  z-index: 1000;
 }
 .header-area .links {
   list-style: none;
-  width: 100%;
-  list-style: none;
-  text-align: right;
-  padding-left: 20px;
-  padding-right: 20px;
-  font-size: 15px;
+  padding-left: 50px;
 }
-
-.header-area .logo span {
-padding: 50px;
-z-index: 2;
-padding-top: 40px;}
-
-
 .header-area .links li {
   display: inline-block;
+  width: fit-content;
   margin-left: 20px;
+}
+.header-area .links li a {
   color: beige;
- 
+  text-decoration: none;
+  transition: 0.1s;
+}
+
+.header-area .links li a:hover {
+  color: rgb(235, 235, 21);
+}
+.header-area .menu{
+  display: none;
+  /* position: relative; */
 }
 
 .introduction-text {
   color: beige;
-  /* text-align: top; */
+  z-index: 2;
+  position: absolute;
+  padding-top: 50px;
+  transform: translate(-50%, -20%);
+  left: 50%;
+  text-align: center;
+  width: 95%;
+}
+.introduction-text span {
+  color: rgb(235, 235, 21);
+}
+.introduction-text h1 {
   text-transform: uppercase;
- /* margin: 0; */
-/* right: 10px; */
-z-index: 2;
-position: absolute;
-transform:translate(-50% -50%);
-left:25%;
-text-align: center;
+  font-size: 40px;
+  padding-top: 100px;
+}
+.introduction-text p {
+  font-size: 20px;
+  line-height: 1.6em;
+  display: none;
+}
+label #btn, label #cancel, #check{
+  display:none;
+}
+/* Start features */
+.features {
+  padding: 25px 0;
+  overflow: hidden;
+  line-height: 1em;
+}
+.features .box {
+  width: 20%;
+  float: left;
+  padding: 0;
+  margin-top: 0;
+  text-align: center;
+}
+.features .box:first-child {
+  margin-left: 120px;
+}
+.features .box i {
+  color: rgb(235, 235, 21);
+  border: 2px solid #ccc;
+  border-width: 12px;
+  border-radius: 100%;
+  background-color: #ccc;
+}
+.features .box h3 {
+  text-transform: uppercase;
+  font-size: 12px;
+  padding: 0px;
+  margin: 5px;
+}
+.features .box p {
+  font-size: 10px;
+  padding: 0px;
+  margin: 0;
+}
+.features .box i:hover {
+  background-color: rgb(235, 235, 21);
+  border-color: rgb(235, 235, 21);
+  color: #ccc;
+}
+/* End features */
+
+/* mobile version */
+
+@media (max-width: 991px) {
+  .portfolio-sida {
+    background-size: cover;
+    background-position: bottom;
+  }
+  .introduction-text p {
+    margin: 20px;
+    font-size: 12px;
+    line-height: 1.6;
+  }
+  .introduction-text h1 {
+    text-transform: uppercase;
+    font-size: 25px;
+    margin-top: 50px;
+    margin-bottom: 30px;
+  }
+  /* start logo */
+  .header-area .logo {
+    font-size: 13px;
+    width: 100%;
+    margin-top: 40px;
+    padding-left: 20px;
+    border-left-width: 20px;
+  }
+  .header-area .logo span {
+    margin: 0;
+    padding-left: 25px;
+    z-index: 2;
+  }
+  /* End logo */
+
+  /* Start features */
+  .features .box {
+    width: 22%;
+    float: left;
+    padding: 0;
+    margin-top: 0;
+    text-align: center;
+  }
+  .features .box i {
+    color: rgb(235, 235, 21);
+    border: 2px solid #ccc;
+    border-width: 8px;
+    border-radius: 100%;
+    background-color: #ccc;
+  }
+  .features .box h3 {
+    text-transform: uppercase;
+    font-size: 8px;
+    line-height: 10px;
+    margin:8px;
+  }
+  .features .box p {
+    font-size: 8px;
+    line-height: 0px;
+  }
+  .features .box i:hover {
+    background-color: rgb(235, 235, 21);
+    border-color: rgb(235, 235, 21);
+    color: #ccc;
+  }
+  .features .box:first-child {
+    margin-left: 20px;
+  }
+  /* end features */
+  .header-area .links {
+  position: fixed;
+    top: 40px;
+    right: 0px ;
+    background-color: #262626;
+    width: 80px;
+    height: 35%;
+    transition: 0.3s;
+    transition: all .5s ease;
+    border-radius: 19px 0px 0px 15px;
+}
+.header-area .links li a{
+display:block;
+height: 100%;
+line-height: 45px;
+font-size: 15px;
+color: beige;
+padding-left: 40px;
+transform: translate(-55%, 0%);
+box-sizing: border-box;
+border-width: 100%;
+border-bottom: 1px solid rgb(255, 255, 255,.1);
+border-bottom: 1px solid black;
+transition: .4s;
+padding-top: 12px;
 }
 
-@media screen and {(min-width: 375px;)
-    
+.links li:hover a {
+  padding-left:50px;
 }
-/* End landing page */
+#check{
+  display: none;
+}
+label #btn, label #cancel{
+  display: inline;
+  position:absolute;
+  cursor:pointer;
+  background-color:#042331;
+  border-radius: 3px;
+}
+label #btn{
+    left:20px;
+    top:38px;
+    font-size: 20px;
+    color:beige;
+    padding: 5px 9px;
+}
+
+label #cansel{
+  z-index:1111;
+  right:195px;
+  top:17px;
+  font-size: 30px;
+  color:beige;
+  padding: 4px 9px;
+
+}
+#check:checked ~ .sidebar{
+right:0px;
+}
+#check:checked ~ label #btn{
+right:0px;
+}
