--- a/public_html/css/edStyle.css
+++ b/public_html/css/edStyle.css
@@ -376,7 +376,7 @@ nav .nav__toggle{
 
 /* ===== FOOTER =====*/
 .footer{
-  background-color: var(--second-color);
+  background-color: black;
   color: #fff;
   text-align: center;
   font-weight: var(--font-semi);
