--- a/public_html/css/Amira.css
+++ b/public_html/css/Amira.css
@@ -164,12 +164,14 @@ img {
 .introduction-text-a h1 {
   text-transform: uppercase;
   font-size: 40px;
-  padding-top: 100px;
+  padding-top: 180px;
 }
 .introduction-text-a p {
-  font-size: 20px;
+  font-size: 15px;
   line-height: 1.6em;
   display: none;
+  padding-top: 30px;
+  line-height: 2em;
 }
 button {
   background-color: rgba(0, 0, 0, 0);
