--- a/public_html/css/Amira.css
+++ b/public_html/css/Amira.css
@@ -1,140 +1,157 @@
+:root{
+  --header-height: 3rem;
+  --font-semi: 600;
+}
+
+/*===== Colors =====*/
+:root{
+  --first-color: #d4d80f;
+  --second-color: #105224;
+}
+
+/*===== Typography =====*/
+:root{
+  --body-font: 'Poppins', sans-serif;
+  --big-font-size: 2rem;
+  --h2-font-size: 1.25rem;
+  --normal-font-size: 0.938rem;
+}
+@media screen and (min-width: 768px){
+  :root{
+    --big-font-size: 3.5rem;
+    --h2-font-size: 2rem;
+    --normal-font-size: 1rem;
+  }
+}
+
+/*===== Margins =====*/
+:root{
+  --mb-1: 0.5rem;
+  --mb-2: 1rem;
+  --mb-3: 1.5rem;
+  --mb-4: 2rem;
+  --mb-5: 2.5rem;
+  --mb-6: 3rem;
+}
+
+/*===== z index =====*/
+:root{
+  --z-back: -10;
+  --z-normal: 1;
+  --z-tooltip: 10;
+  --z-fixed: 100;
+}
+
+/*===== BASE =====*/
+*,::before,::after{
+  box-sizing: border-box;
+  
+}
+html{
+  scroll-behavior: smooth;
+}
+body{
+  margin: var(--header-height) 0 0 0;
+  font-family: var(--body-font);
+  font-size: var(--normal-font-size);
+  color: var(--second-color);
+}
+h1,h2,p{
+  margin: 0;
+}
+ul{
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+a{
+  text-decoration: none;
+}
+img{
+  max-width: 100%;
+  height: auto;
+  display: block;
+}
 
 /* start landing page */
 
-.portfolio-sida-a {
+.portfolio-sida {
   min-height: 80vh;
   padding: 0;
   margin: 0;
-  background-image: url(../bilder/index-images/01.jpg);
+  background-image: url(../bilder/index-images/);
   background-size: 100% auto;
   position: relative;
   background-repeat: no-repeat;
-  z-index: 10;
 }
 
-.portfolio-sida-a .overlay-a {
-  background-color: rgba(0, 0, 0, 0.671);
-  position: absolute;
+.portfolio-sida{
+  background-color: green;
   width: 100%;
   height: 100%;
   left: 0;
   top: 0;
-  z-index: 1;
 }
-.header-area-a {
-  position: relative;
-  z-index: 10;
-  display: flex;
-  padding: 10px;
-}
+
 /* start logo */
-.header-area-a .logo-a {
-  margin-top: 30px;
-  padding: 0px;
-  padding-left: 30px;
+.header-area .logo {
   font-weight: bold;
   font-size: 15px;
   color: beige;
-  display: inline-block;
 }
-.header-area-a .logo-a span {
+.header-area .logo span {
   padding: 35px;
 }
 /* End logo */
-.header-area-a .container-a {
-  width: 88%;
-  text-align: right;
-  margin-top: 10px;
-  position: relative;
-  z-index: 1000;
-}
-.header-area-a .links-a {
-  list-style: none;
-  padding-left: 50px;
-}
-.header-area-a .links-a li {
-  display: inline-block;
-  width: fit-content;
-  margin-left: 20px;
-}
-.header-area-a .links-a li a {
-  color: beige;
-  text-decoration: none;
-  transition: 0.1s;
-}
 
-.header-area-a .links-a li a:hover {
-  color: rgb(235, 235, 21);
-}
-.header-area-a .menu-a {
-  display: none;
-  /* position: relative; */
-}
-
-.introduction-text-a {
+.introduction-text {
   color: beige;
-  z-index: 2;
-  position: absolute;
   padding-top: 50px;
-  transform: translate(-50%, -20%);
-  left: 50%;
   text-align: center;
-  width: 95%;
 }
-.introduction-text-a span {
+.introduction-text span {
   color: rgb(235, 235, 21);
 }
-.introduction-text-a h1 {
+.introduction-text h1 {
   text-transform: uppercase;
   font-size: 40px;
-  padding-top: 180px;
+  padding-top: 100px;
 }
-.introduction-text-a p {
-  font-size: 15px;
+.introduction-text p {
+  font-size: 20px;
   line-height: 1.6em;
-  display: none;
-  padding-top: 30px;
-  line-height: 2em;
 }
-button {
-  background-color: rgba(0, 0, 0, 0);
-  border: none;
-}
+
 /* Start features */
-.features-a {
-  padding: 25px 0;
-  overflow: hidden;
+.features {
   line-height: 1em;
 }
-.features-a .box-a {
+.features .box {
   width: 20%;
   float: left;
   padding: 0;
   margin-top: 0;
   text-align: center;
 }
-.features-a .box-a:first-child {
+.features .box:first-child {
   margin-left: 120px;
 }
-.features-a .box-a i {
+.features .box i {
   color: rgb(235, 235, 21);
   border: 2px solid #ccc;
   border-width: 12px;
   border-radius: 100%;
   background-color: #ccc;
 }
-.features-a .box-a h3 {
+.features .box h3 {
   text-transform: uppercase;
-  font-size: 12px;
   padding: 0px;
-  margin: 5px;
 }
-.features-a .box-a p {
-  font-size: 10px;
+.features .box p {
   padding: 0px;
   margin: 0;
 }
-.features-a .box-a i:hover {
+.features .box i:hover {
   background-color: rgb(235, 235, 21);
   border-color: rgb(235, 235, 21);
   color: #ccc;
@@ -144,162 +161,152 @@ button {
 /* mobile version */
 
 @media (max-width: 991px) {
-  .portfolio-sida-a {
-    min-height: 80vh;
+  .portfolio-sida {
     background-size: cover;
     background-position: bottom;
-    transform: translate(0%, -10%);
-    z-index: 1;
   }
-  .introduction-text-a p {
+  .introduction-text p {
     margin: 20px;
     font-size: 12px;
     line-height: 1.6;
   }
-  .introduction-text-a h1 {
+  .introduction-text h1 {
     text-transform: uppercase;
     font-size: 25px;
-    margin-top: 100px;
+    margin-top: 50px;
     margin-bottom: 30px;
   }
   /* start logo */
-  .header-area-a .logo-a {
-    font-size: 13px;
+  .header-area .logo {
     width: 100%;
-    margin-top: 50px;
-    padding-left: 20px;
-    border-left-width: 20px;
   }
-  .header-area-a .logo-a span {
+  .header-area .logo span {
     margin: 0;
-    padding-left: 25px;
-    z-index: 10;
   }
   /* End logo */
 
   /* Start features */
-  .features-a .box-a {
+  .features .box {
     width: 22%;
-    height: 80px;
     float: left;
     padding: 0;
     margin-top: 0;
     text-align: center;
-    transform: translate(10%, -30%);
   }
-  .features-a .box-a i {
+  .features .box i {
     color: rgb(235, 235, 21);
     border: 2px solid #ccc;
     border-width: 8px;
-    border-block-start-width: 0px;
-    padding-top: 5px;
-    padding-bottom: 0ps;
-    border-radius: 100px;
+    border-radius: 100%;
     background-color: #ccc;
   }
-  .features-a .box-a h3 {
+  .features .box h3 {
     text-transform: uppercase;
-    font-size: 9px;
-    font-weight: bold;
+    font-size: 8px;
     line-height: 10px;
-    margin: 8px;
+    margin:8px;
   }
-  .features-a .box-a p {
+  .features .box p {
     font-size: 8px;
     line-height: 0px;
   }
-  .features-a .box-a i:hover {
+  .features .box i:hover {
     background-color: rgb(235, 235, 21);
     border-color: rgb(235, 235, 21);
     color: #ccc;
   }
-  .features-a .box-a:first-child {
+  .features .box:first-child {
     margin-left: 20px;
   }
   /* end features */
+}
 
-  .header-area-a .links-a {
-    position: fixed;
-    top: 65px;
-    right: 0px;
-    background-color: #262626;
-    width: 130px;
-    height: 50%;
-    transition: 0.3s;
-    transition: all 0.5s ease;
-    border-radius: 10px 0px 0px 15px;
-  }
-  .header-area-a .links-a li a {
-    display: block;
-    height: 100%;
-    line-height: 40px;
-    text-align: left;
-    font-size: 14px;
-    color: beige;
-    transform: translate(-45%, 0%);
-    box-sizing: border-box;
-    border-width: 100%;
-    border-bottom: 1px solid rgb(255, 255, 255, 0.1);
-    border-bottom: 1px solid black;
-    transition: 0.4s;
-    padding-top: 25px;
-  }
+/*===== NAV =====*/
+nav{
+  top: 0;
+  background-color: rgb(129, 71, 4);
+  box-shadow: 0 4px 25px rgba(14,36,49,.15);
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
 
-  .links-a li:hover a {
-    padding-left: 50px;
-  }
-  #btn-a {
-    z-index: 1111;
-    width: 25px;
-    right: 130px;
-    font-size: 20px;
-    color: rgba(245, 245, 220, 0.452);
-    padding: 5px 9px;
-    display: inline-block;
-    cursor: pointer;
-    background-color: beige;
-    border-radius: 3px;
-    transform: translate(1px, 30px);
-  }
+nav ul{
+  float: right;
+}
+
+nav li{
+  display: inline-block;
+  margin: 0 var(--mb-2);
+  
+}
+
+nav a{
+  font-size: 1rem;
+  color: rgb(59, 185, 1);
+  text-transform: uppercase;
+  margin-right: var(--mb-);
+
+}
+
+label.nav__logo{
+  font-size: 35px;
+  font-weight: bold;
+  color: yellow;
+  padding: 0 2rem;
+  line-height: 5rem;
+}
+
+a:hover{
+  transition: .5s;
+  color: red;
+}
+
+nav .nav__toggle{
+  color: yellow;
+  font-size: 40px;
+  cursor: pointer;
+  display: none;
+  position: absolute;
+  
 }
 
 
-
-@media screen and (max-width: 768px) {
-  label.nav__logo {
+@media screen and (max-width:768px) {
+  label.nav__logo{
     font-size: 2rem;
     padding-left: 3rem;
   }
-  nav ul {
+  nav ul{
     margin-right: 2rem;
   }
-  nav a {
+  nav a{
     font-size: 20px;
   }
 }
 
-@media screen and (max-width: 480px) {
-  nav .nav__toggle {
-    display: block;
+@media screen and (max-width:480px) {
+  nav .nav__toggle{
+    display: block;  
     position: fixed;
     z-index: var(2000);
     top: 0;
-    left: 0.5rem;
+    left: .5rem;
+    
   }
-  nav li {
+  nav li{
     display: block;
     color: rgb(78, 13, 13);
     margin: 50px 0;
     line-height: 30px;
   }
-  nav a {
+  nav a{
     font-size: 20px;
   }
-  a:hover {
+  a:hover{
     border: none;
     color: rgba(200, 97, 0, 0.911);
   }
-  nav ul {
+  nav ul{
     position: fixed;
     z-index: var(--z-fixed);
     left: -100%;
@@ -310,46 +317,48 @@ button {
     opacity: 0.8;
     transition: all 0.5s;
   }
-  nav ul.show {
+  nav ul.show{
     left: 0;
   }
 }
 
 /* ===== CONTACT =====*/
-.field {
+.field{
   width: 50%;
   padding: 0.5rem 1rem;
   outline: none;
-  border-radius: 0.5rem;
+  border-radius: .5rem;
   border: 2px solid rgba(0, 0, 0, 0);
   background-color: rgba(230, 230, 230, 0.6);
   font-size: 1.1rem;
-  transition: 0.3s;
+  transition: .3s;
   resize: none;
 }
 
-.field:hover {
+.field:hover{
   background-color: rgba(0, 0, 0, 0.1);
 }
 
-.field:focus {
+.field:focus{
   background-color: #fff;
 }
 
-.area {
+.area{
   min-height: 150px;
+  
 }
 
-.contact__form {
+.contact__form{
   width: 100%;
   text-align: center;
   font-size: var(--normal-font-size);
   font-weight: var(--font-semi);
   padding: 1rem;
-  border-radius: 0.5rem;
+  border-radius: .5rem;
   outline: none;
   margin-bottom: var(--mb-4);
-  box-shadow: 0 4px 25px rgba(14, 36, 49, 0.15);
+  box-shadow: 0 4px 25px rgba(14,36,49,.15);
+  
 }
 .error {
   color: red;
@@ -362,7 +371,7 @@ button {
   opacity: 0;
 }
 
-.contact__button {
+.contact__button{
   padding: 0.5rem 1rem;
   font-size: 1.1rem;
   background-color: #2ecc71;
@@ -370,56 +379,58 @@ button {
   outline: none;
   border: none;
   color: #fff;
-  border-radius: 0.5rem;
+  border-radius: .5rem;
   transition: 0.3s;
 }
 
-.contact__button:hover {
+.contact__button:hover{
   background-color: #1b9044;
 }
 
+
 /* ===== FOOTER =====*/
-.footer {
+.footer{
   background-color: var(--second-color);
   color: #fff;
   text-align: center;
   font-weight: var(--font-semi);
   padding: 2rem 0;
 }
-.footer__social {
+.footer__social{
   margin-bottom: var(--mb-4);
 }
-.footer__icon {
+.footer__icon{
   font-size: 1.5rem;
   color: #fff;
-  margin: 0 var(--mb-2);
+  margin: 0 var(--mb-2)
 }
 
-@media screen and (min-width: 768px) {
-  body {
+@media screen and (min-width: 768px){
+  body{
     margin: 0;
   }
-  .section {
+  .section{
     padding-top: 4rem;
     padding-bottom: 3rem;
   }
-  .section-title {
+  .section-title{
     margin-bottom: var(--mb-6);
   }
-  .section-title::after {
+  .section-title::after{
     width: 80px;
     top: 3rem;
   }
 }
 
-@media screen and (min-width: 1024px) {
-  .container {
+@media screen and (min-width: 1024px){
+  .container{
     margin-left: auto;
     margin-right: auto;
   }
+  
 }
 
-.section-title {
+.section-title{
   position: relative;
   font-size: var(--h2-font-size);
   color: var(--first-color);
@@ -428,7 +439,8 @@ button {
   text-align: center;
 }
 
-.section {
+.section{
   padding-top: 3rem;
   padding-bottom: 2rem;
 }
+
