--- a/OLD_public_html/Amira pesonliga sida/personlig.css
+++ b/OLD_public_html/Amira pesonliga sida/personlig.css
@@ -11,7 +11,7 @@ body {
   height: 46em;
   width: 100%;
   background-size: cover;
-  background-image: url(images2/josada001.jpg);
+  background-image: url(../bilder/index-images/josada001.jpg);
   background-repeat: no-repeat;
   position: relative;
   bottom: 25px;
@@ -55,7 +55,7 @@ h1 {
   left: 4em;
   width: 15vw;
   height: 15vw;
-  background-image: url("images2/largg.jpg");
+  background-image: url("../bilder/index-images/largg.jpg");
   background-size: cover;
   border-width: 1px;
   border-radius: 20px;
