--- a/OLD_public_html/Amira pesonliga sida/personlig.css
+++ b/OLD_public_html/Amira pesonliga sida/personlig.css
@@ -193,7 +193,7 @@ h2:hover {
     left: 17px;
     width: 38vw;
     height: 30vw;
-    background-image: url("images2/largg.jpg");
+    background-image: url("../bilder/index-images/largg.jpg");
     background-size: cover;
     border-width: 2px;
     border-style: solid;
