--- a/public_html/css/aboutGrp12.css
+++ b/public_html/css/aboutGrp12.css
@@ -88,6 +88,16 @@ body{
     cursor: pointer;
 }
 
+.about-footer{
+    font-family: var(--ff-main);
+    background-color: var(--clr-light);
+    padding: 2rem 5rem 2rem 5rem;
+    margin-top: 2rem;
+    border-top: 2px solid var(--clr-dark);
+    text-align: center;
+
+}
+
 @media screen and (min-width:768px){
     .wrapper-grid{
         grid-template-columns: repeat(2, 1fr);
