--- a/public_html/css/emma.css
+++ b/public_html/css/emma.css
@@ -21,64 +21,119 @@
 }
 
 body{
-    color: var(--clr-dark)
+    color: var(--clr-light)
 }
 
 .outer-grid{
     display: grid;
-    grid-template-rows: 1fr 1fr 1fr;
+    background-image: url(../bilder/profil/code.jpg);
+    grid-template-rows: 0.8fr 0.5fr 1fr;
     grid-template-areas:
         "profile"
         "info"
         "skills";
 }
 
-.profile{
+.emma-profile{
     display:grid;
     width: 100%;
     align-items: center;
     grid-template-rows: 1fr 1fr;
-    background-color: var(--clr-light);
     grid-area: profile;
 
     
 }
-.contact-list{
+
+.emma-img{
+    border: 2px solid var(--clr-accent);
+    position: relative;
+    padding: 0.5em;
+    margin: 1em;
+}
+.emma-contact{
     align-self: center;
     font-weight: bold;
-    font-size: 2rem;
+    font-size: 1.8rem;
     font-family: var(--ff-main);
     margin-left: 0.5rem;
     list-style: inside;
     padding-right: 1.6rem;
 }
 
-
-.about-me{
-    background-color: var(--clr-light);
+.emma-about{
     font-family: var(--ff-main);
     font-size: 1rem;
-    margin-top: 2rem;
-    margin-bottom: 2rem;
+    margin-top: 0.5rem;
+    margin-bottom: 1rem;
     padding: 0.5rem;
     grid-area: info;
     
 }
 
-.skills{
-    background-color: var(--clr-light);
+.skills {
+    background: none;
+    width: 100%;
+    height: auto;
+    position: relative;
+    display:none;
     grid-area: skills;
-
-}
-
-@media screen and (min-width:800px){
+  }
+ 
+  .skills .skill-box {
+    background-color: rgba(214, 197, 197, 0.301);
+    display: flex;
+    padding: 14px;
+    margin-left: 19px;
+    margin-bottom: 30px;
+    margin-right: 8px;
+    line-height: 20px;
+  }
+  .skills .skill-name {
+    font-weight: bold;
+    width: 130px;
+    text-align: center;
+    padding-right: 10px;
+    color: rgb(20, 19, 19);
+  }
+  .skills .skill-progress {
+    height: 20px;
+    width: 100%;
+    background-color: whitesmoke;
+    border-radius: 6px;
+    position: relative;
+    padding-left: 20px;
+    overflow: hidden;
+  }
+  .skill-progress span {
+    position: absolute;
+    display: block;
+    left: 0;
+    top: 0;
+    width: 0%;
+    height: 100%;
+    background-color: #f00;
+    transition: all 0.5s;
+    text-align: center;
+    font-weight: bold;
+  }
+  .progress-yellowgreen span {
+    background-color: yellowgreen;
+  }
+  .progress-blue span {
+    background-color: blue;
+  }
+  .progress-orchid span {
+    background-color: orchid;
+  }
+  
+@media screen and (min-width:760px){
     .outer-grid{
         grid-template-columns: repeat(2, 1fr);
         grid-template-areas:
         "profile skills"
         "info skills";
     }
-    .profile{
+    .emma-profile{
         grid-template-columns: 1fr 1fr;
     }
     .skills{
@@ -95,7 +150,7 @@ body{
         "profile skills"
         "info skills";
     }
-    .profile{
+    .emma-profile{
         grid-template-columns: 1fr 1fr;
         
     }
