--- a/public_html/css/aboutGrp12.css
+++ b/public_html/css/aboutGrp12.css
@@ -29,6 +29,7 @@ body{
     background-color: var(--clr-light);
     padding: 2rem 5rem 2rem 5rem;
     margin-bottom: 2rem;
+    border-top: 2px solid var(--clr-dark);
     border-bottom: 2px solid var(--clr-dark);
     text-align: center;
 }
@@ -93,6 +94,7 @@ body{
     padding: 2rem 5rem 2rem 5rem;
     margin-top: 2rem;
     border-top: 2px solid var(--clr-dark);
+    border-bottom: 2px solid var(--clr-dark);
     text-align: center;
 
 }
