--- a/public_html/css/main.css
+++ b/public_html/css/main.css
@@ -101,6 +101,15 @@ button {
   background-color: rgba(0, 0, 0, 0);
   border: none;
 }
+
+button.nastaProjekt {
+  background-color: bisque;
+  border:1px solid #000;
+  width: 100%;
+  height: 2.5em;
+
+}
+
 /* Start features */
 .features-a {
   padding: 25px 0;
