--- a/public_html/css/main.css
+++ b/public_html/css/main.css
@@ -25,7 +25,7 @@
 .header-area-a {
   position: relative;
   z-index: 10;
-  display: flex;
+  /* display: flex; */
   padding: 10px;
 }
 /* start logo */
