--- a/public_html/css/main.css
+++ b/public_html/css/main.css
@@ -77,7 +77,7 @@ nav {
   /* position: relative; */
 }
 
-.introduction-text-a {
+.introduction-text {
   color: beige;
   z-index: 2;
   position: absolute;
@@ -87,15 +87,15 @@ nav {
   text-align: center;
   width: 95%;
 }
-.introduction-text-a span {
+.introduction-text span {
   color: rgb(235, 235, 21);
 }
-.introduction-text-a h1 {
+.introduction-text h1 {
   text-transform: uppercase;
   font-size: 40px;
   padding-top: 180px;
 }
-.introduction-text-a p {
+.introduction-text p {
   font-size: 15px;
   line-height: 1.6em;
   display: none;
